; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-engine.c_photo_parse_option.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-engine.c_photo_parse_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@optarg = common dso_local global i32 0, align 4
@disable_crc32 = common dso_local global i32 0, align 4
@max_memory = common dso_local global i32 0, align 4
@dump_fields_str = common dso_local global i32 0, align 4
@index_mode = common dso_local global i32 0, align 4
@dump_unimported_mode = common dso_local global i32 0, align 4
@MCL_CURRENT = common dso_local global i32 0, align 4
@MCL_FUTURE = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"error: fail to lock paged memory\0A\00", align 1
@repair_binlog_mode = common dso_local global i32 0, align 4
@write_only = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @photo_parse_option(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %44 [
    i32 68, label %5
    i32 109, label %17
    i32 77, label %26
    i32 105, label %28
    i32 73, label %29
    i32 107, label %32
    i32 82, label %42
    i32 119, label %43
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @optarg, align 4
  %7 = call i32 @atoi(i32 %6)
  store i32 %7, i32* @disable_crc32, align 4
  %8 = load i32, i32* @disable_crc32, align 4
  %9 = icmp sle i32 0, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %5
  %11 = load i32, i32* @disable_crc32, align 4
  %12 = icmp sle i32 %11, 3
  br label %13

13:                                               ; preds = %10, %5
  %14 = phi i1 [ false, %5 ], [ %12, %10 ]
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  br label %45

17:                                               ; preds = %1
  %18 = load i32, i32* @optarg, align 4
  %19 = call i32 @atoi(i32 %18)
  store i32 %19, i32* @max_memory, align 4
  %20 = load i32, i32* @max_memory, align 4
  %21 = icmp slt i32 %20, 1
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 1, i32* @max_memory, align 4
  br label %23

23:                                               ; preds = %22, %17
  %24 = load i32, i32* @max_memory, align 4
  %25 = mul nsw i32 %24, 1048576
  store i32 %25, i32* @max_memory, align 4
  br label %45

26:                                               ; preds = %1
  %27 = load i32, i32* @optarg, align 4
  store i32 %27, i32* @dump_fields_str, align 4
  store i32 1, i32* @index_mode, align 4
  br label %45

28:                                               ; preds = %1
  store i32 1, i32* @index_mode, align 4
  br label %45

29:                                               ; preds = %1
  %30 = load i32, i32* @dump_unimported_mode, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* @dump_unimported_mode, align 4
  store i32 1, i32* @index_mode, align 4
  br label %45

32:                                               ; preds = %1
  %33 = load i32, i32* @MCL_CURRENT, align 4
  %34 = load i32, i32* @MCL_FUTURE, align 4
  %35 = or i32 %33, %34
  %36 = call i32 @mlockall(i32 %35)
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %32
  %39 = load i32, i32* @stderr, align 4
  %40 = call i32 @fprintf(i32 %39, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %41

41:                                               ; preds = %38, %32
  br label %45

42:                                               ; preds = %1
  store i32 1, i32* @repair_binlog_mode, align 4
  store i32 1, i32* @index_mode, align 4
  br label %45

43:                                               ; preds = %1
  store i32 1, i32* @write_only, align 4
  br label %45

44:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %46

45:                                               ; preds = %43, %42, %41, %29, %28, %26, %23, %13
  store i32 0, i32* %2, align 4
  br label %46

46:                                               ; preds = %45, %44
  %47 = load i32, i32* %2, align 4
  ret i32 %47
}

declare dso_local i32 @atoi(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @mlockall(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
